# secretsanta

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  AGENTS.md  LICENSE  MANIFEST.in  README.md  SecretSanta.ipynb  app.py  codecov.yml  noxfile.py  pyproject.toml  requirements-package.in  requirements.in  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  python-package.yml  test-publish.yml
.streamlit/: config.toml
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  modules.rst  sphinx.rst
docs/source/_templates/: README.md
run/: run.py
secretsanta/cli/: cli.py
secretsanta/main/: core.py  funs.py  utils.py
tests/main/: test_core.py  test_funs.py  test_logging.py  test_santa.py
validation/: participants.json
