[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secretsanta"
classifiers=[
        'Development Status :: 4 - Beta',
        'License :: OSI Approved :: MIT License',
        'Operating System :: POSIX :: Linux',
        'Programming Language :: Python :: 3 :: Only',
        'Topic :: Games/Entertainment',
    ]
description = ""
authors = [
    {name = "Mirai Solutions, email = "opensource@mirai-solutions.com"},
]
readme = "README.md"
license = {text = "MIT"}


