[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secretsanta"
description = "Seret Santa Randomizer"
readme = "README.md"
authors = [
    {name = "Mirai Solutions, email = "opensource@mirai-solutions.com"},
]
urls = {Homepage: "https://github.com/miraisolutions/secretsanta"}
classifiers=[
        'Development Status :: 4 - Beta',
        'License :: OSI Approved :: MIT License',
        'Operating System :: POSIX :: Linux',
        'Programming Language :: Python :: 3 :: Only',
        'Topic :: Games/Entertainment',
    ]
license = {text = "MIT"}
version = ["0.1.0"]

